--- a/index.html
+++ b/index.html
@@ -1,50 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El clima</title>
     <link rel="stylesheet" href="http://fonts.googleapis.com/css2?family=Roboto&display=swap">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/spinner.css">
     <link rel="shortcut icon" href="images/weather-forecast.ico" type="image/x-icon">
 </head>
+
 <body onload="onLoad()">
-    
+
     <div id="container">
-        <div class="block">
-            <div id="location"></div>
-            <div id="date"></div>
-            <div id="description"></div>
-            <div class="info" id="temperature"></div>
+
+        <div class="upper-block">
+            <div class="left-content">
+                <div id="greeting"></div>
+                <div id="location"></div>
+                <div id="date"></div>
+                <div id="description"></div>
+            </div>
+            <div id="temperature"></div>
         </div>
+
         <div class="block">
-            <div class="information-container">
-                <div class="label">tempMax:</div>
-                <div class="info" id="tempMax"></div>
-            </div>
-            <div class="information-container">
-                <div class="label">tempMin:</div>
-                <div class="info" id="tempMin"></div>
-            </div>
-            <div class="information-container">
-                <div class="label">feelsLike:</div>
-                <div class="info" id="feelsLike"></div>
-            </div>
-            <div class="information-container">
-                <div class="label">Pressure:</div>
-                <div class="info" id="pressure"></div>
-            </div>
-            <div class="information-container">
-                <div class="label">Humidity:</div>
-                <div class="info" id="humidity"></div>
-            </div>
-            <div class="information-container">
-                <div class="label">windSpeed:</div>
-                <div class="info" id="windSpeed"></div>
-            </div>
-        </div>        
+            <ul>
+                <li>
+                    <div class="info" id="tempMax"></div>
+                </li>
+                <li>
+                    <div class="info" id="tempMin"></div>
+                </li>
+                <li>
+                    <div class="info" id="feelsLike"></div>
+                </li>
+                <li>
+                    <div class="info" id="pressure"></div>
+                </li>
+                <li>
+                    <div class="info" id="humidity"></div>
+                </li>
+                <li>
+                    <div class="info" id="windSpeed"></div>
+                </li>
+            </ul>
+            <img id="gif" alt="animation">
+        </div>
     </div>
-    <span id="loader" class="loader"></span>
+
+    <div class="lds-ripple" id="loader">
+        <div></div>
+        <div></div>
+    </div>
     <script src="main.js"></script>
 </body>
+
 </html>
